fix up some overflow & edit defualt width
increased width default of main window -- detailed view pop-up looks
better.

--- a/src/app/css/app.css
+++ b/src/app/css/app.css
@@ -760,7 +760,7 @@ body,
   right: 0;
   top: 16%;
   max-width: 940px;
-  max-height: 400px;
+  max-height: 430px;
   background-image: url("../images/Item-detail-backround.png");
   background-repeat: no-repeat;
   -webkit-background-size: 100% 91.7%;
