--- a/src/app/styl/movie_detail.styl
+++ b/src/app/styl/movie_detail.styl
@@ -13,7 +13,7 @@
     right 0
     top 16%
     max-width 940px
-    max-height 400px
+    max-height 430px
     background-image: url('../../images/Item-detail-backround.png')
     background-repeat no-repeat
     background-size 100% 91.7%
